frontend/test/should_pass/getEquivalentStructurallyOrAdd.grg
rule r(ref a:array<graph>)
{
	modify {
	---
		def var g:graph;
		eval {
			(yield g) = getEquivalentStructurallyOrAdd(this, a);
		}
		
		exec({(g) = getEquivalentStructurallyOrAdd(g, a)});
	}
}
