frontend/test/should_fail/param_012.grg
rule r(<-e:UEdge->) {
  modify {}
}